--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
     background-color: lightgreen;
     padding: 15px;
     flex: 0 1 80%;
+    max-width: 800px;
 }
 
 .row-one {
@@ -66,7 +67,7 @@ body {
 
 .right-column {
     margin-top: 15px;
-    height: 200px;
+    flex: 1;
     width: 50%;
     display: flex;
     flex-direction: column;
@@ -86,9 +87,8 @@ body {
     border: 3px solid rgb(97, 16, 16);
     background-color: rgb(209, 134, 134);
     padding: 10px;
-    flex: 1;
+     flex: 1;
 }
-
 
 
 .row-two {
